--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@wmde/wikit-vue-components": "^2.0.0",
     "core-js": "^3.6.5",
     "vue": "^2.6.11"
   },
