--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@wmde/wikit-vue-components": "^2.0.0",
     "core-js": "^3.6.5",
+    "debounce": "^1.2.1",
     "vue": "^2.6.11"
   },
   "devDependencies": {
